  turned on if the destination name is the currently ACTIVE user name, which
  can be selected by pressing Ctrl+U AND the Rvd flag is only turned
  on if the destination address is the default address of the current
  mail area, you must add "Switch ReceiveAllNames Off" and
  "Switch ReceiveAllAddresses Off" to the configuration file.

Fixes:

- Fixes for treatment of High-ASCII characters, in message list and on
  text import/export.

- The message body length that Msged was reporting to the Squish API was
  longer than necessary.  This caused space waste and could also confuse
  other programs that read from the Squish base (though no real-life
  programs that have problems with this are known to me).

- Fixed the "PrivateNet" feature.

- Fixed the SoftCRXlat translation method to work on the transport charset
  instead of the local charset. This affects specifically the problem with
  the cyrillic big en ("H"). Please refer to the entry for the keyword
  "SoftCRXlat" in the updated Msged manual.

- The OS/2 version now also allows entry of the "cyrillic small er" letter
  (scan code 0xe0) in codepage 866.

- Msged can now handle TAB characters in text files when importing them.

- Fixed crashes on importing text files that contained tabulator characters.

- Reduced the memory requirements of a Borland compiled DOS executable
  considerably in case of a lot of "Alias" definitions. Again the realloc()
  problem.

- Fixed display of kludge character (001) on Linux.

- The last line of the screen is now usable in the Message Editor also
  when the Status Bar is switched off.

- Fixed the handling of FIDOUSER.LST in case of user entries that did not
  contain a ",", like "Echolist".

- Fixed a bug that caused Msged to sometimes trash lastread pointers in
  exactly one (mostly, but not necessarily the first *.MSG area) message area
  when exiting.

- If you used "scan" to do an area scan on startup, the scan could